Fixed issues with text jumping around

--- a/src/components/card-list.scss
+++ b/src/components/card-list.scss
@@ -47,12 +47,13 @@
 .card-list .card {
   position: relative;
   width: 140px;
-  height: 120px;
+  height: 130px;
   color: white;
   background-color: #555;
   padding: 5px;
   cursor: pointer;
   border-radius: 5px;
+  box-sizing: border-box;
 
   &:hover {
     background-color: #666;
@@ -66,7 +67,7 @@
   }
 
   &.selected:not(.empty) {
-    border: 2px solid white;
+    outline: 2px solid white;
     background-color: #777;
   }
 
